--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vectorious",
   "version": "1.0.0",
-  "description": "A generalized matrix and vector library in JavaScript.",
+  "description": "A generalized n-dimensional matrix and vector library in JavaScript.",
   "main": "vectorious.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,6 @@
     "matrix",
     "vector",
     "linear",
-    "algebra",
     "algebra"
   ],
   "author": "Mateo Gianolio",
