--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectorious",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "A generalized n-dimensional matrix and vector library in JavaScript.",
   "main": "vectorious.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
+    "async": "^0.9.0",
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.5.1",
