--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
