optimize addition, subtraction, scaling, dot product

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "nblas": "github:mateogianolio/nblas",
+    "ndarray": "^1.0.18",
+    "ndarray-blas-level1": "^1.1.1",
+    "ndarray-blas-level2": "^1.0.2"
   }
 }
