--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+sudo: false
 language: node_js
 node_js:
   - "4.0"
 before_install:
-  - sudo apt-get install libblas-dev
+  - apt-get install libblas-dev
+install:
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 env:
   - CXX=g++-4.8
 addons:
@@ -11,3 +14,5 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - gcc-4.8
+    - g++-4.8
+    - clang
