--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: false
 language: node_js
 node_js:
   - "4.0"
 before_install:
-  - apt-get install libblas-dev
+  - sudo apt-get install libblas-dev
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 env:
