--- a/codeclimate.yml
+++ b/codeclimate.yml
@@ -4,4 +4,9 @@ languages:
   PHP: false
   Python: false
 exclude_paths:
-- "dist/vectorious-3.0.0.js"
+  - "dist/vectorious-3.0.0.js"
+engines:
+  eslint:
+    checks:
+      no-console:
+        enabled: false
