--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,9 @@
+engines:
+  eslint:
+    enabled: true
+    checks:
+      no-console:
+        enabled: false
 languages:
   Ruby: false
   JavaScript: true
