--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
 env:
   - CXX=g++-4.8
 addons:
+  code_climate:
+    repo_token: 7bc2ff765ac0619975d32fe57959db6374d14a96780a1438ec68ea14036748e1
   apt:
     sources:
     - ubuntu-toolchain-r-test
