--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "nblas": "^1.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
-    "mocha": "^2.2.1",
-    "nblas": "github:mateogianolio/nblas"
+    "mocha": "^2.2.1"
   }
 }
