--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
     "benchmark": "^1.0.0",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.1"
   },
   "dependencies": {
     "mocha": "^2.2.1",
