--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "vectorious.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
-    "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
-    "benchmark_big": "node ./benchmarks/bigvector.js && node ./benchmarks/bigmatrix.js"
+    "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js"
   },
   "repository": {
     "type": "git",
