--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "4.0"
 before_install:
-  - sudo apt-get install libblas-dev
+  - sudo apt-get install libblas-dev liblapack-dev
 env:
   - CXX=g++-4.8
 addons:
