--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectorious",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "description": "A high performance linear algebra library.",
   "main": "vectorious.js",
   "scripts": {
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
-    "benchmark": "^2.0.0"
+    "benchmark": "^2.1.0",
+    "mocha": "^2.4.5"
   },
   "dependencies": {
-    "mocha": "^2.3.4",
-    "nblas": "^1.1.2"
+    "nblas": "^1.1.3"
   }
 }
