--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
-    "coverage": "istanbul cover _mocha -- -R spec"
+    "coverage": "istanbul cover _mocha -- -R spec",
+    "docs": "jsdoc -c doc.json"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,8 @@
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
     "benchmark": "^2.1.0",
+    "jsdoc": "^3.4.3",
+    "minami": "^1.1.1",
     "mocha": "^2.4.5"
   },
   "optionalDependencies": {
