--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,17 @@ before_install:
   - sudo apt-get install libblas-dev
 env:
   - CXX=g++-4.8
+  - CC_TEST_REPORTER_ID=7bc2ff765ac0619975d32fe57959db6374d14a96780a1438ec68ea14036748e1
+before_script:
+  - npm install -g nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - nyc --reporter=lcov npm test
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 addons:
-  code_climate:
-    repo_token: 7bc2ff765ac0619975d32fe57959db6374d14a96780a1438ec68ea14036748e1
   apt:
     sources:
     - ubuntu-toolchain-r-test
