--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vectorious",
-  "version": "4.8.5",
+  "version": "4.8.6",
   "description": "A high performance linear algebra library.",
-  "main": "vectorious.js",
+  "main": "built/vectorious.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha -r ts-node/register test/**/*",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
     "docs": "jsdoc -c doc.json",
-    "build": "gulp clean && gulp build",
+    "build": "gulp clean && gulp build && tsc",
     "postinstall": "opencollective-postinstall"
   },
   "repository": {
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
     "benchmark": "^2.1.0",
     "browserify": "^16.2.2",
     "del": "^3.0.0",
@@ -43,13 +44,17 @@
     "jsdoc": "^3.4.3",
     "minami": "^1.1.1",
     "mocha": "^5.1.1",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3",
     "vinyl-source-stream": "^2.0.0"
   },
   "optionalDependencies": {
     "nblas": "^1.2.0"
   },
   "dependencies": {
-    "opencollective-postinstall": "^2.0.0"
+    "opencollective-postinstall": "^2.0.0",
+    "tsify": "^4.0.0"
   },
   "collective": {
     "type": "opencollective",
