--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A high performance linear algebra library.",
   "main": "built/vectorious.js",
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*",
+    "test": "mocha -r ts-node/register ./src/*.spec.ts",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
     "docs": "jsdoc -c doc.json",
     "build": "gulp clean && gulp build && tsc",
@@ -57,6 +57,8 @@
     "nblas": "^1.2.2"
   },
   "dependencies": {
+    "@types/nblas": "^1.2.0",
+    "@types/node": "^10.11.3",
     "opencollective-postinstall": "^2.0.0"
   },
   "collective": {
