--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectorious",
-  "version": "5.0.0-beta.0",
+  "version": "5.0.0",
   "description": "A high performance linear algebra library.",
   "main": "built/vectorious.js",
   "scripts": {
