--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register ./src/*.spec.ts",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
-    "docs": "jsdoc -c doc.json",
+    "docs": "typedoc --out docs --exclude \"**/*+(index|.spec).ts\" --target es6 src",
     "build": "gulp clean && gulp build && tsc"
   },
   "browser": {
@@ -63,13 +63,12 @@
     "gulp": "^4.0.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.1",
-    "jsdoc": "^3.5.5",
-    "minami": "^1.2.3",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
     "ts-node": "^7.0.1",
     "tsify": "^4.0.0",
     "tslint": "^5.11.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.1.1",
     "vinyl-source-stream": "^2.0.0"
   },
