--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
     "@types/mocha": "^5.2.5",
+    "@types/nblas": "^1.2.0",
     "@types/node": "^10.11.3",
     "benchmark": "^2.1.4",
     "browserify": "^16.2.3",
@@ -64,7 +65,7 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
+    "nyc": "^13.3.0",
     "ts-node": "^7.0.1",
     "tsify": "^4.0.0",
     "tslint": "^5.11.0",
