--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register ./src/*.spec.ts",
     "benchmark": "node ./benchmarks/vector.js && node ./benchmarks/matrix.js",
-    "docs": "typedoc --out docs --exclude \"**/*+(index|.spec).ts\" --target es6 src",
+    "docs": "typedoc --out docs --exclude \"**/*+(index|.spec).ts\" --target es6 src && touch docs/.nojekyll",
     "build": "gulp clean && gulp build && tsc"
   },
   "browser": {
