--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vectorious",
-  "version": "5.3.0",
+  "version": "5.3.1",
   "description": "A high performance linear algebra library.",
   "main": "built/index.js",
   "scripts": {
     "test": "nyc mocha -r ts-node/register ./src/*.spec.ts",
     "benchmark": "ts-node ./src/NDArray.bench.ts && ts-node ./src/Vector.bench.ts && ts-node ./src/Matrix.bench.ts",
-    "docs": "typedoc --out docs --exclude \"**/*+(index|.spec).ts\" --target es6 src && touch docs/.nojekyll",
+    "docs": "typedoc --out docs --exclude \"**/*+(index|.spec|.bench).ts\" --target es6 src && touch docs/.nojekyll",
     "build": "gulp clean && gulp build && tsc"
   },
   "browser": {
