Add browser tests (#154)
* add browser tests using mochify

* fix 2 moderate vulns

* rm bench.ts from coverage

* add tests for util.ts

* rm gulpfile.js from coverage

* fix throws() syntax in tests

* upd deps

* lint

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A high performance linear algebra library.",
   "main": "built/index.js",
   "scripts": {
-    "test": "nyc mocha -r ts-node/register ./src/*.spec.ts",
+    "test:node": "nyc mocha -r ts-node/register ./src/*.spec.ts",
+    "test:browser": "mochify --plugin tsify ./src/*.spec.ts",
+    "test": "npm run test:node && npm run test:browser",
     "lint": "tslint -p . -c tslint.json 'src/*.ts'",
     "benchmark": "ts-node ./src/NDArray.bench.ts && ts-node ./src/Vector.bench.ts && ts-node ./src/Matrix.bench.ts",
     "docs": "typedoc --out docs --exclude \"**/*+(index|bench|.spec|.bench).ts\" --target es6 src && touch docs/.nojekyll",
@@ -60,23 +62,24 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^11.9.0",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.11.6",
     "benchmark": "^2.1.4",
     "browserify": "^16.2.3",
     "del": "^4.0.0",
     "gulp": "^4.0.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "matplotnode": "^0.3.0",
-    "mocha": "^6.0.0",
+    "mocha": "^6.0.2",
+    "mochify": "^6.1.1",
     "nodemark": "^0.3.0",
     "nyc": "^13.3.0",
     "ts-node": "^8.0.3",
-    "tsify": "^4.0.0",
-    "tslint": "^5.11.0",
+    "tsify": "^4.0.1",
+    "tslint": "^5.14.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.1.1",
+    "typescript": "^3.3.4000",
     "vinyl-source-stream": "^2.0.0"
   },
   "optionalDependencies": {
