--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,6 +4,8 @@ plugins:
     config: tsconfig.json
     enabled: true
 exclude_patterns:
+  - "gulpfile.js"
+  - "src/bench.ts"
   - "src/*.spec.ts"
   - "src/*.bench.ts"
   - "dist/"
