--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "lts/*"
 before_install:
-  - sudo apt-get install libblas-dev
+  - sudo apt-get install libblas-dev libpython-dev
 install:
   - npm install
 env:
