--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "built/index.js",
   "scripts": {
     "test:node": "nyc mocha -r ts-node/register \"./src/**/*.spec.ts\"",
+    "test:single": "mocha -r ts-node/register",
     "test:browser": "mochify --plugin tsify \"./src/**/*.spec.ts\"",
     "test": "npm run test:node && npm run test:browser",
     "lint": "tslint -p . -c tslint.json 'src/*.ts'",
@@ -81,7 +82,6 @@
     "tsify": "^4.0.1",
     "tslint": "^5.18.0",
     "typedoc": "^0.15.0",
-    "typedoc-plugin-markdown": "^2.1.1",
     "typescript": "^3.5.3",
     "vinyl-source-stream": "^2.0.0"
   },
