--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "vectorious",
-  "version": "6.0.0-beta.2",
+  "version": "6.0.0-beta.3",
   "description": "A high performance linear algebra library.",
   "main": "built/index.js",
+  "types": "built/index.d.ts",
   "scripts": {
     "test:node": "nyc mocha -r ts-node/register/transpile-only 'src/**/*.spec.ts'",
     "test:single": "mocha -r ts-node/register/transpile-only",
