--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectorious",
-  "version": "6.0.0-beta.12",
+  "version": "6.0.0",
   "description": "A high performance linear algebra library.",
   "main": "built/index.js",
   "types": "built/index.d.ts",
