--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "built/index.js",
   "types": "built/index.d.ts",
   "scripts": {
-    "test:node": "nyc mocha -r ts-node/register 'src/**/*.spec.ts'",
-    "test:single": "mocha -r ts-node/register",
-    "test:browser": "mochify --plugin tsify 'src/**/*.spec.ts'",
-    "test:browser:single": "mochify --plugin tsify",
-    "test": "npm run test:node && npm run test:browser",
+    "test": "jest",
     "benchmark": "for file in $(ls src/**/*.bench.ts); do ts-node $file; done",
     "docs": "jsdoc --configure jsdoc.json",
     "build": "gulp clean && gulp build && tsc && npm run docs",
@@ -18,30 +14,6 @@
   "browser": {
     "nblas": false,
     "nlapack": false
-  },
-  "nyc": {
-    "extension": [
-      ".ts",
-      ".tsx"
-    ],
-    "exclude": [
-      "gulpfile.js",
-      "**/*.d.ts",
-      "benchmarks/**",
-      "built/**",
-      "dist/**",
-      "docs/**",
-      "examples/**",
-      "coverage/**",
-      "src/**/*.spec.ts",
-      "src/**/*.bench.ts",
-      "src/bench.ts",
-      "src/types.ts"
-    ],
-    "reporter": [
-      "lcov"
-    ],
-    "all": true
   },
   "repository": {
     "type": "git",
@@ -76,13 +48,14 @@
     "gulp": "^4.0.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.2",
+    "jest": "^26.4.2",
     "jsdoc": "^3.6.5",
     "matplotnode": "^0.4.2",
     "mocha": "^8.1.3",
     "mochify": "^6.6.0",
     "nodemark": "^0.3.0",
-    "nyc": "^15.1.0",
     "tidy-jsdoc": "^1.4.0",
+    "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "tsify": "^5.0.2",
     "typescript": "^4.0.2",
