--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectorious",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "description": "A high performance linear algebra library.",
   "main": "built/index.js",
   "types": "built/index.d.ts",
@@ -62,9 +62,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "optionalDependencies": {
-    "nblas": "^2.1.9"
-  },
-  "dependencies": {
+    "nblas": "^2.1.9",
     "nlapack": "^2.0.4"
   }
 }
