--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/mateogianolio/vectorious",
   "devDependencies": {
-    "@types/mocha": "^8.0.3",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.10.1",
     "esbuild": "^0.7.9",
     "jest": "^26.4.2",
