--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       if: runner.os == 'Linux'
 
     - name: Install dependencies on linux
-      run: sudo apt-get install -yq libblas-dev liblapack-dev liblapacke-dev libpython-dev
+      run: sudo apt-get install -yq libblas-dev liblapack-dev liblapacke-dev libpython2-dev
       if: runner.os == 'Linux'
 
     - name: Install dependencies on mac
