Publish coverage to CodeClimate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,9 @@ jobs:
 
     - name: Test
       run: npm test
+
+    - name: Publish coverage to CodeClimate
+      uses: paambaati/codeclimate-action@v2.7.5
+      env:
+        CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+      coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
