--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,5 @@ jobs:
       uses: paambaati/codeclimate-action@v2.7.5
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-      coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
+      with:
+        coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
