--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,14 +18,30 @@ jobs:
         with:
           node-version: 14.x
 
+      - name: Setup C++ environment on linux
+        uses: kurocha/setup-cpp@v1
+
+      - name: Install dependencies on linux
+        run: sudo apt-get install -yq libblas-dev liblapack-dev liblapacke-dev python-dev
+
       - name: Install package dependencies
-        run: npm ci --no-optional
+        run: npm ci
 
       - name: Build dist/
         run: npm run build
 
       - name: Generate docs/
         run: npm run docs
+
+      - name: Test
+        run: npm test
+
+      - name: Publish coverage to CodeClimate
+        uses: paambaati/codeclimate-action@v2.7.5
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        with:
+          coverageLocations: ${{github.workspace}}/coverage/lcov.info:lcov
 
       - name: Publish dist/
         run: |
@@ -48,7 +64,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-      
+
       - if: steps.publish.outputs.type != 'none'
         run: |
           git tag ${{ steps.publish.outputs.version }}
