--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         if: runner.os == 'Linux'
 
       - name: Install dependencies on linux
-        run: sudo apt-get install -yq libblas-dev liblapack-dev liblapacke-dev python-dev
+        run: sudo apt-get install -yq libblas-dev liblapack-dev liblapacke-dev
         if: runner.os == 'Linux'
 
       - name: Install dependencies on mac
